Fix z-index on menu

--- a/styles/subs.scss
+++ b/styles/subs.scss
@@ -51,6 +51,7 @@ nav {
     padding: 1rem 0 5rem;
     list-style: none;
     margin: 0;
+    z-index: 2;
     li {   
       &:hover {
         a svg .st0 {
